Atcoder/ABC過去問/D/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/D/ABC100D.cpp: In function 'int main()':
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/D/ABC100D.cpp:222:16: error: invalid types 'll {aka long long int}[ll {aka long long int}]' for array subscript
  222 |       rep(p,n)b[p]=0;
      |                ^
